FLUID-4970: Over-riding html: overflow set in fss-global, to fix scrolling bug in chrome

--- a/src/webapp/components/uiOptions/css/FatPanelUIOptionsFrame.css
+++ b/src/webapp/components/uiOptions/css/FatPanelUIOptionsFrame.css
@@ -7,6 +7,7 @@
 
 html {
 	overflow: scroll;
+	overflow-y: hidden;
 }
 
 .fl-uiOptions-fatPanel .fl-uiOptions {
